p2/confs/service.yaml
# exposes the app pods as network services
# allows Ingress to send traffic to them
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: default
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: default
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  namespace: default
spec:
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 80
